Improved Angular routing.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
 <div class="container-fluid" id="wrapper">
   <div class="row">
     <nav class="sidebar col-xs-12 col-sm-4 col-lg-3 col-xl-2 bg-faded sidebar-style-1">
-      <h1 class="site-title"><a href="index.html"><em class="fa fa-rocket"></em> AUTOAMATED DETECTION OF IMPROPER BEHAVIOR ON ONLINE SOCIAL MEDIA</a></h1>
+      <h1 class="site-title"><a href="index.html"><em class="fa fa-rocket"></em> AUTOAMATED DETECTION OF IMPROPER BEHAVIOR ON ONLINE SOCIAL NETWORKS</a></h1>
 
       <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><em class="fa fa-bars"></em></a>
 
       <ul class="nav nav-pills flex-column sidebar-nav">
-        <li class="nav-item"><a class="nav-link active" href="index.html"><em class="fa fa-dashboard"></em> Dashboard <span class="sr-only">(current)</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="widgets.html"><em class="fa fa-calendar-o"></em> Widgets</a></li>
-        <li class="nav-item"><a class="nav-link" href="charts.html"><em class="fa fa-bar-chart"></em> Charts</a></li>
-        <li class="nav-item"><a class="nav-link" href="elements.html"><em class="fa fa-hand-o-up"></em> UI Elements</a></li>
-        <li class="nav-item"><a class="nav-link" href="cards.html"><em class="fa fa-clone"></em> Cards</a></li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/dashboard" (click)="onDashboardClick($event)">
+            <em class="fa fa-dashboard"></em> Dashboard <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/basic-sentiment-analysis" (click)="onBasicSentimentAnalysisClick($event)">
+            <em class="fa fa-bar-chart"></em> Basic Sentiment Analysis </a>
+        </li>
       </ul>
 
       <a href="#" class="logout-button"><em class="fa fa-power-off"></em> Signout</a></nav>
@@ -60,7 +63,12 @@
                   The project considers how technological innovations such as sentiment analysis can restrict the harm caused by improper behaviour and content on online Social Networks.
                 </p>
 
-                <p class="lead"><a class="btn btn-primary btn-lg mt-2" href="#" role="button">Learn more</a></p>
+                <p class="lead">
+                  <a class="btn btn-primary btn-lg mt-2" href="#" role="button">Research Article</a>
+                </p>
+
+
+
               </div>
 
               <div class="card mb-4">
@@ -245,61 +253,19 @@
             <div class="col-md-12 col-lg-4">
               <div class="card mb-4">
                 <div class="card-block">
-                  <h3 class="card-title">Top Users</h3>
+                  <h3 class="card-title">Project Planning</h3>
 
-                  <h6 class="card-subtitle mb-2 text-muted">Most active this week</h6>
+                  <h6 class="card-subtitle mb-2 text-muted">Agile Methodology</h6>
 
                   <div class="user-progress justify-center">
-                    <div class="col-sm-3 col-md-2" style="padding: 0;">
-                      <img src="images/profile-pic.jpg" alt="profile photo" class="circle profile-photo" style="width: 100%; max-width: 100px;">
-                    </div>
-
-                    <div class="col-sm-6 col-md-8">
-                      <h6 class="pt-1">Username 1</h6>
-
-                      <div class="progress progress-custom">
-                        <div class="progress-bar bg-primary" style="width: 75%" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-2">
-                      <div class="progress-label">75%</div>
+                    <div class="col-sm-12 col-md-12" style="padding: 0;">
+                      <a class="btn btn-primary btn-lg mt-2" href="https://github.com/nate-brown/automated-online-behaviour-detection/projects/1?" role="button" target="_blank">Project Planning</a>
                     </div>
                   </div>
 
                   <div class="user-progress justify-center">
-                    <div class="col-sm-3 col-md-2" style="padding: 0;">
-                      <img src="images/profile-pic.jpg" alt="profile photo" class="circle profile-photo" style="width: 100%; max-width: 100px;">
-                    </div>
-
-                    <div class="col-sm-6 col-md-8">
-                      <h6 class="pt-1">Username 2</h6>
-
-                      <div class="progress progress-custom">
-                        <div class="progress-bar bg-primary" style="width: 50%" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-2">
-                      <div class="progress-label">50%</div>
-                    </div>
-                  </div>
-
-                  <div class="user-progress justify-center">
-                    <div class="col-sm-3 col-md-2" style="padding: 0;">
-                      <img src="images/profile-pic.jpg" alt="profile photo" class="circle profile-photo" style="width: 100%; max-width: 100px;">
-                    </div>
-
-                    <div class="col-sm-6 col-md-8">
-                      <h6 class="pt-1">Username 3</h6>
-
-                      <div class="progress progress-custom">
-                        <div class="progress-bar bg-primary" style="width: 25%" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-2">
-                      <div class="progress-label">25%</div>
+                    <div class="col-sm-12 col-md-12" style="padding: 0;">
+                      <a class="btn btn-primary btn-lg mt-2" href="https://github.com/nate-brown/automated-online-behaviour-detection/" role="button" target="_blank">GitHub Repository</a>
                     </div>
                   </div>
 
