Addded extra Social Sentiment Analysis Algorithm API output error check.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -156,6 +156,16 @@
                     </table>
                   </div>
 
+                  <p>
+                    The Sentiment Analysis API uses the Social Sentiment Analysis algorithm from
+                    <a href="https://algorithmia.com/algorithms/nlp/SocialSentimentAnalysis">https://algorithmia.com/algorithms/nlp/SocialSentimentAnalysis</a>
+                    which is based on the work of Hutto & Gilbert (2014).
+                  </p>
+
+                  <p>
+                    Hutto, C.J and Gilbert, E.E, 2014. VADER: A Parsimonious Rule-based Model for Sentiment Analysis of Social Media Text. Eighth International Conference on Weblogs and Social Media (ICWSM-14).
+                  </p>
+
                 </div>
               </div>
 
