Refactored the header and side nav into their own Angular components. Added SA playground info tip.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,11 @@
 <div class="container-fluid" id="wrapper">
   <div class="row">
-    <nav class="sidebar col-xs-12 col-sm-4 col-lg-3 col-xl-2 bg-faded sidebar-style-1">
-      <h1 class="site-title"><a href="index.html"><em class="fa fa-rocket"></em> AUTOAMATED DETECTION OF IMPROPER BEHAVIOR ON ONLINE SOCIAL NETWORKS</a></h1>
 
-      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><em class="fa fa-bars"></em></a>
-
-      <ul class="nav nav-pills flex-column sidebar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="/dashboard" (click)="onDashboardClick($event)">
-            <em class="fa fa-dashboard"></em> Dashboard <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/basic-sentiment-analysis" (click)="onBasicSentimentAnalysisClick($event)">
-            <em class="fa fa-bar-chart"></em> Basic Sentiment Analysis </a>
-        </li>
-      </ul>
-
-      <a href="#" class="logout-button"><em class="fa fa-power-off"></em> Signout</a></nav>
+    <side-nav></side-nav>
 
     <main class="col-xs-12 col-sm-8 offset-sm-4 col-lg-9 offset-lg-3 col-xl-10 offset-xl-2 pt-3 pl-4">
-      <header class="page-header row justify-center">
-        <div class="col-md-6 col-lg-8" >
-          <h1 class="float-left text-center text-md-left">Dashboard</h1>
-        </div>
 
-        <div class="dropdown user-dropdown col-md-6 col-lg-4 text-center text-md-right"><a class="btn btn-stripped dropdown-toggle" href="https://example.com" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="images/profile-pic.jpg" alt="profile photo" class="circle float-left profile-photo" width="50" height="auto">
-
-          <div class="username mt-1">
-            <h4 class="mb-1">209076879</h4>
-
-            <h6 class="text-muted">Nathaniel Brown</h6>
-          </div>
-        </a>
-
-          <div class="dropdown-menu dropdown-menu-right" style="margin-right: 1.5rem;" aria-labelledby="dropdownMenuLink"><a class="dropdown-item" href="#"><em class="fa fa-user-circle mr-1"></em> View Profile</a>
-            <a class="dropdown-item" href="#"><em class="fa fa-sliders mr-1"></em> Preferences</a>
-            <a class="dropdown-item" href="#"><em class="fa fa-power-off mr-1"></em> Logout</a></div>
-        </div>
-
-        <div class="clear"></div>
-      </header>
+      <app-header [title]="'Dashboard'" ></app-header>
 
       <section class="row">
         <div class="col-sm-12">
@@ -66,8 +31,6 @@
                 <p class="lead">
                   <a class="btn btn-primary btn-lg mt-2" href="#" role="button">Research Article</a>
                 </p>
-
-
 
               </div>
 
@@ -157,12 +120,17 @@
                   </div>
 
                   <p>
+                    Returns sentiment ratings of positive, negative, neutral and compound in JSON format.
+                    The first three sentiments ratings scale from 0 to 1. Compound sentiment is the overall sentiment, where it scales between -1 to 1, negative to positive respectively.
+                  </p>
+
+                  <p style="font-size: 10px;">
                     The Sentiment Analysis API uses the Social Sentiment Analysis algorithm from
                     <a href="https://algorithmia.com/algorithms/nlp/SocialSentimentAnalysis">https://algorithmia.com/algorithms/nlp/SocialSentimentAnalysis</a>
                     which is based on the work of Hutto & Gilbert (2014).
                   </p>
 
-                  <p>
+                  <p style="font-size: 10px;">
                     Hutto, C.J and Gilbert, E.E, 2014. VADER: A Parsimonious Rule-based Model for Sentiment Analysis of Social Media Text. Eighth International Conference on Weblogs and Social Media (ICWSM-14).
                   </p>
 
@@ -192,10 +160,6 @@
                       <a class="btn btn-primary btn-lg mt-2" href="https://github.com/nate-brown/automated-online-behaviour-detection/" role="button" target="_blank">GitHub Repository</a>
                     </div>
                   </div>
-
-                  <div class="divider"></div>
-
-                  <div id="calendar"></div>
 
                   <div class="divider"></div>
 
