Refactored the app.component template.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,11 @@
 
       <section class="row">
         <div class="col-sm-12">
+
+          <!-- Let column -->
           <section class="row">
             <div class="col-md-12 col-lg-8">
+
               <div class="jumbotron">
                 <h1 class="mb-4">Introduction</h1>
 
@@ -32,28 +35,6 @@
                   <a class="btn btn-primary btn-lg mt-2" href="#" role="button">Research Article</a>
                 </p>
 
-              </div>
-
-              <div class="card mb-4">
-                <div class="card-block">
-                  <h3 class="card-title">Overview</h3>
-
-                  <div class="dropdown card-title-btn-container">
-                    <button class="btn btn-sm btn-subtle" type="button"><em class="fa fa-list-ul"></em> View All</button>
-
-                    <button class="btn btn-sm btn-subtle dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><em class="fa fa-cog"></em></button>
-
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#"><em class="fa fa-search mr-1"></em> More info</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-thumb-tack mr-1"></em> Pin Window</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-remove mr-1"></em> Close Window</a></div>
-                  </div>
-
-                  <h6 class="card-subtitle mb-2 text-muted">Latest traffic stats</h6>
-
-                  <div class="canvas-wrapper">
-                    <canvas class="main-chart" id="line-chart" height="200" width="600"></canvas>
-                  </div>
-                </div>
               </div>
 
               <!-- Playground -->
@@ -136,6 +117,31 @@
 
                 </div>
               </div>
+              <!-- /Playground -->
+
+              <!-- Graph -->
+              <div class="card mb-4">
+                <div class="card-block">
+                  <h3 class="card-title">Overview</h3>
+
+                  <div class="dropdown card-title-btn-container">
+                    <button class="btn btn-sm btn-subtle" type="button"><em class="fa fa-list-ul"></em> View All</button>
+
+                    <button class="btn btn-sm btn-subtle dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><em class="fa fa-cog"></em></button>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#"><em class="fa fa-search mr-1"></em> More info</a>
+                      <a class="dropdown-item" href="#"><em class="fa fa-thumb-tack mr-1"></em> Pin Window</a>
+                      <a class="dropdown-item" href="#"><em class="fa fa-remove mr-1"></em> Close Window</a></div>
+                  </div>
+
+                  <h6 class="card-subtitle mb-2 text-muted">Latest traffic stats</h6>
+
+                  <div class="canvas-wrapper">
+                    <canvas class="main-chart" id="line-chart" height="200" width="600"></canvas>
+                  </div>
+                </div>
+              </div>
+              <!-- Graph -->
 
             </div>
 
@@ -211,6 +217,7 @@
                 </div>
               </div>
 
+              <!--
               <div class="card mb-4">
                 <div class="card-block">
                   <h3 class="card-title">Todo List</h3>
@@ -281,11 +288,16 @@
                   </div>
                 </div>
               </div>
+              -->
             </div>
+            <!-- /Right Column -->
+
           </section>
+
           <section class="row">
             <div class="col-12 mt-1 mb-4">Template by <a href="https://www.medialoot.com">Medialoot</a></div>
           </section>
+
         </div>
       </section>
     </main>
