Began moving the dashboard component to its own directory.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
+++ b/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
@@ -11,7 +11,8 @@
       <ul class="nav nav-pills flex-column sidebar-nav">
         <li class="nav-item">
           <a class="nav-link" href="/dashboard" (click)="onDashboardClick($event)">
-            <em class="fa fa-dashboard"></em> Dashboard </a>
+            <em class="fa fa-dashboard"></em> Dashboard
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="/basic-sentiment-analysis" (click)="onBasicSentimentAnalysisClick($event)">
