--- a/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
+++ b/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
@@ -1,50 +1,12 @@
 
 <div class="container-fluid" id="wrapper">
   <div class="row">
-    <nav class="sidebar col-xs-12 col-sm-4 col-lg-3 col-xl-2 bg-faded sidebar-style-1">
-      <h1 class="site-title">
-        <a href="index.html"><em class="fa fa-rocket"></em> AUTOAMATED DETECTION OF IMPROPER BEHAVIOR ON ONLINE SOCIAL NETWORKS</a>
-      </h1>
 
-      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><em class="fa fa-bars"></em></a>
-
-      <ul class="nav nav-pills flex-column sidebar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/dashboard" (click)="onDashboardClick($event)">
-            <em class="fa fa-dashboard"></em> Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/basic-sentiment-analysis" (click)="onBasicSentimentAnalysisClick($event)">
-            <em class="fa fa-bar-chart"></em> Basic Sentiment Analysis <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-
-    </nav>
+    <side-nav [linkId]="2"></side-nav>
 
     <main class="col-xs-12 col-sm-8 offset-sm-4 col-lg-9 offset-lg-3 col-xl-10 offset-xl-2 pt-3 pl-4">
-      <header class="page-header row justify-center">
-        <div class="col-md-6 col-lg-8" >
-          <h1 class="float-left text-center text-md-left">Basic Sentiment Analysis</h1>
-        </div>
 
-        <div class="dropdown user-dropdown col-md-6 col-lg-4 text-center text-md-right"><a class="btn btn-stripped dropdown-toggle" href="https://example.com" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="images/profile-pic.jpg" alt="profile photo" class="circle float-left profile-photo" width="50" height="auto">
-
-          <div class="username mt-1">
-            <h4 class="mb-1">209076879</h4>
-
-            <h6 class="text-muted">Nathaniel Brown</h6>
-          </div>
-        </a>
-
-          <div class="dropdown-menu dropdown-menu-right" style="margin-right: 1.5rem;" aria-labelledby="dropdownMenuLink"><a class="dropdown-item" href="#"><em class="fa fa-user-circle mr-1"></em> View Profile</a>
-            <a class="dropdown-item" href="#"><em class="fa fa-sliders mr-1"></em> Preferences</a>
-            <a class="dropdown-item" href="#"><em class="fa fa-power-off mr-1"></em> Logout</a></div>
-        </div>
-
-        <div class="clear"></div>
-      </header>
+      <app-header [title]="'Basic Sentiment Analysis'" ></app-header>
 
       <section class="row">
         <div class="col-sm-12">
