--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="wrapper">
   <div class="row">
 
-    <side-nav></side-nav>
+    <side-nav [linkId]="1"></side-nav>
 
     <main class="col-xs-12 col-sm-8 offset-sm-4 col-lg-9 offset-lg-3 col-xl-10 offset-xl-2 pt-3 pl-4">
 
@@ -61,9 +61,11 @@
                   <p>Type in an opinionated sentence to test the Sentiment Analysis API.</p>
 
                   <div class="input-group">
-                    <input id="btn-input" type="text" class="form-control input-md" placeholder="iPhones are the best cellular phones!" />
+                    <input id="input-sa-playground" type="text" class="form-control input-md" placeholder="iPhones are the best cellular phones!" />
                     <span class="input-group-btn">
-													<button class="btn btn-primary btn-md" id="btn-todo" (click)="onPlaygroundClick($event)">Submit</button>
+													<button class="btn btn-primary btn-md" id="btn-a-playground" (click)="onPlaygroundClick($event)">
+                            Submit <i class="fa fa-circle-o-notch fa-spin fa-fw" [class.hidden]="!playgroundLoading"></i>
+                          </button>
 											</span>
                   </div>
 
