--- a/src/app/shared-components/header.template.html
+++ b/src/app/shared-components/header.template.html
@@ -5,7 +5,7 @@
 
   <div class="dropdown user-dropdown col-md-6 col-lg-4 text-center text-md-right">
     <a class="btn btn-stripped dropdown-toggle" href="https://example.com" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <img src="images/profile-pic.jpg" alt="profile photo" class="circle float-left profile-photo" width="50" height="auto">
+      <img src="assets/images/profile-pic.jpg" alt="profile photo" class="circle float-left profile-photo" width="50" height="auto">
 
       <div class="username mt-1">
         <h4 class="mb-1">209076879</h4>
