--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -60,6 +60,11 @@ p {
   color: #7c7c7c;
   font-size: .9rem; }
 
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+
 .card-inverse p {
   color: #fff;
   font-size: .9rem; }
