--- a/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
+++ b/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
@@ -13,101 +13,140 @@
           <section class="row">
             <div class="col-md-12 col-lg-8">
 
+              <!-- Sentence Lists -->
               <div class="card mb-4">
                 <div class="card-block">
-                  <h3 class="card-title">Overview</h3>
+                  <h3 class="card-title">Test Data</h3>
 
-                  <div class="dropdown card-title-btn-container">
-                    <button class="btn btn-sm btn-subtle" type="button"><em class="fa fa-list-ul"></em> View All</button>
-
-                    <button class="btn btn-sm btn-subtle dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><em class="fa fa-cog"></em></button>
-
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#"><em class="fa fa-search mr-1"></em> More info</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-thumb-tack mr-1"></em> Pin Window</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-remove mr-1"></em> Close Window</a></div>
-                  </div>
-
-                  <h6 class="card-subtitle mb-2 text-muted">Latest traffic stats</h6>
-
-                  <div class="canvas-wrapper">
-                    <canvas class="main-chart" id="line-chart" height="200" width="600"></canvas>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card mb-4">
-                <div class="card-block">
-                  <h3 class="card-title">Recent Orders</h3>
-
-                  <div class="dropdown card-title-btn-container">
-                    <button class="btn btn-sm btn-subtle" type="button"><em class="fa fa-list-ul"></em> View All</button>
-
-                    <button class="btn btn-sm btn-subtle dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><em class="fa fa-cog"></em></button>
-
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="#"><em class="fa fa-search mr-1"></em> More info</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-thumb-tack mr-1"></em> Pin Window</a>
-                      <a class="dropdown-item" href="#"><em class="fa fa-remove mr-1"></em> Close Window</a></div>
-                  </div>
-
+                  <p>
+                    Positive opinions
+                  </p>
                   <div class="table-responsive">
                     <table class="table table-striped">
+
+                      <thead>
+                        <tr>
+                          <th>#</th>
+
+                          <th>Sentence</th>
+                        </tr>
+                      </thead>
+
+                      <tbody>
+                        <tr *ngFor="let sentence of sentenceListPositive.sentenceList; let i = index">
+                          <td>{{ i + 1 }}</td>
+
+                          <td>{{ sentence }}</td>
+                        </tr>
+                      </tbody>
+
+                    </table>
+
+                  </div>
+
+                  <p>
+                    Negative opinions
+                  </p>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+
+                      <thead>
+                        <tr>
+                          <th>#</th>
+
+                          <th>Sentence</th>
+                        </tr>
+                      </thead>
+
+                      <tbody>
+                        <tr *ngFor="let sentence of sentenceListNegative.sentenceList; let i = index">
+                          <td>{{ i + 1 }}</td>
+
+                          <td>{{ sentence }}</td>
+                        </tr>
+                      </tbody>
+
+                    </table>
+                  </div>
+
+                  <p>
+                    Hate speech
+                  </p>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+
                       <thead>
                       <tr>
-                        <th>Order #</th>
+                        <th>#</th>
 
-                        <th>Product</th>
-
-                        <th>Customer</th>
-
-                        <th>Status</th>
+                        <th>Sentence</th>
                       </tr>
                       </thead>
 
                       <tbody>
-                      <tr>
-                        <td>0001</td>
+                      <tr *ngFor="let sentence of sentenceListHateSpeech.sentenceList; let i = index">
+                        <td>{{ i + 1 }}</td>
 
-                        <td>Product Name 1</td>
-
-                        <td>Customer 1</td>
-
-                        <td>Complete</td>
-                      </tr>
-
-                      <tr>
-                        <td>0002</td>
-
-                        <td>Product Name 2</td>
-
-                        <td>Customer 2</td>
-
-                        <td>Complete</td>
-                      </tr>
-
-                      <tr>
-                        <td>0003</td>
-
-                        <td>Product Name 3</td>
-
-                        <td>Customer 3</td>
-
-                        <td>Processing</td>
-                      </tr>
-
-                      <tr>
-                        <td>0004</td>
-
-                        <td>Product Name 4</td>
-
-                        <td>Customer 4</td>
-
-                        <td>Pending</td>
+                        <td>{{ sentence }}</td>
                       </tr>
                       </tbody>
+
                     </table>
                   </div>
+
+                  <p>
+                    Cyber-bullying
+                  </p>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+
+                      <thead>
+                      <tr>
+                        <th>#</th>
+
+                        <th>Sentence</th>
+                      </tr>
+                      </thead>
+
+                      <tbody>
+                      <tr *ngFor="let sentence of sentenceListCyberBullying.sentenceList; let i = index">
+                        <td>{{ i + 1 }}</td>
+
+                        <td>{{ sentence }}</td>
+                      </tr>
+                      </tbody>
+
+                    </table>
+                  </div>
+
+                  <p>
+                    Cyber-stalking
+                  </p>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+
+                      <thead>
+                      <tr>
+                        <th>#</th>
+
+                        <th>Sentence</th>
+                      </tr>
+                      </thead>
+
+                      <tbody>
+                      <tr *ngFor="let sentence of sentenceListCyberStalking.sentenceList; let i = index">
+                        <td>{{ i + 1 }}</td>
+
+                        <td>{{ sentence }}</td>
+                      </tr>
+                      </tbody>
+
+                    </table>
+                  </div>
+
                 </div>
               </div>
+              <!-- /Sentence Lists -->
 
               <div class="card mb-4">
                 <div class="card-block">
@@ -211,57 +250,8 @@
                     </div>
                   </div>
 
-                  <div class="divider"></div>
+                  <side-timeline></side-timeline>
 
-                  <div id="calendar"></div>
-
-                  <div class="divider"></div>
-
-                  <h3 class="card-title">Timeline</h3>
-
-                  <h6 class="card-subtitle mb-2 text-muted">What's coming up</h6>
-
-                  <ul class="timeline">
-                    <li>
-                      <div class="timeline-badge"><em class="fa fa-camera"></em></div>
-
-                      <div class="timeline-panel">
-                        <div class="timeline-heading">
-                          <h5 class="timeline-title mt-2">Lorem ipsum</h5>
-                        </div>
-
-                        <div class="timeline-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="timeline-badge primary"><em class="fa fa-link"></em></div>
-
-                      <div class="timeline-panel">
-                        <div class="timeline-heading">
-                          <h5 class="timeline-title mt-2">Dolor</h5>
-                        </div>
-
-                        <div class="timeline-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="timeline-badge"><em class="fa fa-paperclip"></em></div>
-
-                      <div class="timeline-panel">
-                        <div class="timeline-heading">
-                          <h5 class="timeline-title mt-2">Sit amet</h5>
-                        </div>
-
-                        <div class="timeline-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
                 </div>
               </div>
 
