Changed project link to Trello board.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -159,7 +159,7 @@
 
                   <div class="user-progress justify-center">
                     <div class="col-sm-12 col-md-12" style="padding: 0;">
-                      <a class="btn btn-primary btn-lg mt-2" href="https://github.com/nate-brown/automated-online-behaviour-detection/projects/1?" role="button" target="_blank">Project Planning</a>
+                      <a class="btn btn-primary btn-lg mt-2" href="https://trello.com/b/RtCLHqqb" role="button" target="_blank">Project Planning</a>
                     </div>
                   </div>
 
