--- a/src/app/shared-components/header.template.html
+++ b/src/app/shared-components/header.template.html
@@ -14,10 +14,11 @@
     </a>
 
     <div class="dropdown-menu dropdown-menu-right" style="margin-right: 1.5rem;" aria-labelledby="dropdownMenuLink">
-      <a class="dropdown-item" href="#"><em class="fa fa-user-circle mr-1"></em> View Profile</a>
-      <a class="dropdown-item" href="#"><em class="fa fa-sliders mr-1"></em> Preferences</a>
-      <a class="dropdown-item" href="#"><em class="fa fa-power-off mr-1"></em> Logout</a></div>
+      <a class="dropdown-item" href="https://github.com/nate-brown" target="_blank"><em class="fa fa-user-circle mr-1"></em> View Profile</a>
+      <a class="dropdown-item" href="https://trello.com/b/RtCLHqqb" target="_blank"><em class="fa fa-sliders mr-1"></em> Trello Board</a>
     </div>
+
+  </div>
 
   <div class="clear"></div>
 </header>
