Begun running sentiment analysis tests on the sentence lists.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
+++ b/src/app/basic-sentiment-analysis/basic-sentiment-analysis-page.template.html
@@ -43,6 +43,10 @@
                     Therefore, due to the nature of the research project, words used in these lists may offend, insult, intimidate, or threaten an individual or group based on a trait or attribute, such as sexual orientation, religion, color, gender, or disability.
                   </p>
 
+                  <p class="lead">
+                    <a class="btn btn-primary btn-lg mt-2" href="#historical-results" role="button">Skip to results</a>
+                  </p>
+
                   <div class="divider"></div>
 
                   <h6 class="card-subtitle mb-2 text-muted">Positive opinions</h6>
@@ -231,7 +235,7 @@
 
               <div class="card mb-4">
                 <div class="card-block">
-                  <h3 class="card-title">Historical Test Results</h3>
+                  <h3 id="historical-results" class="card-title">Historical Test Results</h3>
 
                   <div class="divider"></div>
 
@@ -737,6 +741,139 @@
                     </table>
                   </div>
 
+                  <div class="divider"></div>
+
+                  <h6 class="card-subtitle mb-2 text-muted">Cyber-stalking - Perpetrator</h6>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+                      <thead>
+                      <tr>
+                        <th>Sentence</th>
+
+                        <th>Positive</th>
+
+                        <th>Negative</th>
+
+                        <th>Neutral</th>
+
+                        <th>Compound</th>
+                      </tr>
+                      </thead>
+
+                      <tbody>
+                      <tr>
+                        <td>Let’s make this simple. You have until noon. I am not bluffing. Don’t be stupid. Once I send pics of you they cannot be unsent.</td>
+
+                        <td>0</td>
+
+                        <td>0.134</td>
+
+                        <td>0.866</td>
+
+                        <td>-0.5267</td>
+                      </tr><tr>
+                        <td>Well what can I say, I do what I want. But, no worries since you made it very easy to see why you single</td>
+
+                        <td>0.239</td>
+
+                        <td>0.181</td>
+
+                        <td>0.58</td>
+
+                        <td>0.1513</td>
+                      </tr><tr>
+                        <td>Really, yeah I just went through ever single one of your pictures… sure your married lol and I am not a creep, just curious and stubborn thanks</td>
+
+                        <td>0.316</td>
+
+                        <td>0.141</td>
+
+                        <td>0.543</td>
+
+                        <td>0.7032</td>
+                      </tr><tr>
+                        <td>Privacy settings don’t stop people who know how to get around those things on facebook, yeah and i still made it into your pics to see</td>
+
+                        <td>0.08</td>
+
+                        <td>0.08</td>
+
+                        <td>0.839</td>
+
+                        <td>0</td>
+                      </tr>
+
+                      </tbody>
+                    </table>
+                  </div>
+
+                  <div class="divider"></div>
+
+                  <h6 class="card-subtitle mb-2 text-muted">Cyber-stalking - Perpetrator &amp; Victim</h6>
+                  <div class="table-responsive">
+                    <table class="table table-striped">
+                      <thead>
+                      <tr>
+                        <th>Sentence</th>
+
+                        <th>Positive</th>
+
+                        <th>Negative</th>
+
+                        <th>Neutral</th>
+
+                        <th>Compound</th>
+                      </tr>
+                      </thead>
+
+                      <tbody>
+                      <!--bindings={
+  "ng-reflect-ng-for-of": ""
+}--><tr>
+                        <td>Let’s make this simple. You have until noon. I am not bluffing. Don’t be stupid. Once I send pics of you they cannot be unsent.</td>
+
+                        <td>0</td>
+
+                        <td>0.134</td>
+
+                        <td>0.866</td>
+
+                        <td>-0.5267</td>
+                      </tr><tr>
+                        <td>Next time a woman politely declines an unwarranted advance from you, please take that with grace and don’t try to convince her otherwise. Well what can I say, I do what I want. But, no worries since you made it very easy to see why you single</td>
+
+                        <td>0.255</td>
+
+                        <td>0.093</td>
+
+                        <td>0.652</td>
+
+                        <td>0.7713</td>
+                      </tr><tr>
+                        <td>HAHAHA IM MARRIED YOU IDIOT. But nice try. Really, yeah I just went through ever single one of your pictures… sure your married lol and I am not a creep, just curious and stubborn thanks</td>
+
+                        <td>0.357</td>
+
+                        <td>0.176</td>
+
+                        <td>0.466</td>
+
+                        <td>0.8373</td>
+                      </tr><tr>
+                        <td>My album is set to private you fucking idiot. Privacy settings don’t stop people who know how to get around those things on facebook, yeah and i still made it into your pics to see</td>
+
+                        <td>0.056</td>
+
+                        <td>0.149</td>
+
+                        <td>0.795</td>
+
+                        <td>-0.5563</td>
+                      </tr>
+
+                      </tbody>
+                    </table>
+                  </div>
 
                 </div>
               </div>
