--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -22,7 +22,7 @@
                 </p>
 
                 <p>
-                  This project examines the complexities of automatically detecting improper behaviour on online Social Networks.
+                  This study examines the complexities of automatically detecting improper behaviour on online Social Networks.
                   It examines the complexities of automatically detecting improper behaviour on online Social Networks.
                 </p>
 
