Added the link to the Research Article.
Signed-off-by: nathanielbrown <nbnatebrown@gmail.com>

--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -23,7 +23,6 @@
 
                 <p>
                   This study examines the complexities of automatically detecting improper behaviour on online Social Networks.
-                  It examines the complexities of automatically detecting improper behaviour on online Social Networks.
                 </p>
 
                 <p>
@@ -32,9 +31,8 @@
                 </p>
 
                 <p class="lead">
-                  <a class="btn btn-primary btn-lg mt-2" href="#" role="button">Research Article</a>
+                  <a class="btn btn-primary btn-lg mt-2" href="/upload/Automated_Detection_of_Improper_Behaviour_on_Online_Social_Networks.pdf" role="button">Research Article</a>
                 </p>
-
               </div>
 
               <!-- Playground -->
